tests/macros/checkbox/plugin.stderr
error: option `plugin` does not exist for kind `checkbox`
 --> $DIR/plugin.rs:2:48
  |
2 |     let q = inquisition::questions![Checkbox { plugin: todo!() }];
  |                                                ^^^^^^
