tests/macros/checkbox/plugin.rs
fn main() {
    let q = inquisition::questions![Checkbox { plugin: todo!() }];
}
